# portfolio-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_SOURCES_DE_VERITE.md  AUDIT_GLOBAL.md  AUDIT_GLOBAL_APPLICATION.md  AUDIT_IMPORT_TR.md  BACKLOG_GLOBAL.md  CHANGELOG.md  CHECKLIST_QUALITE.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  DATA_QUALITY_GAPS.md  LICENSE  Patrimoine Desktop.spec  README.md  REPORT_CODEX_EPARGNE.md  SOURCE_DE_VERITE.md  TASKS_AUDIT.md  _check_db.py  _test_analytics.py  app.py  cols.txt  comments.txt  main.py  patrimoine_turso.db  patrimoine_turso.db-info  pyproject.toml  pytest.ini  readme.md  requirements-dev.txt  requirements.txt  test_results.txt  trade_republic_raw.csv
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
core/: db_connection.py
db/: schema.sql
docs/: ARCHITECTURE.md
legacy/: 3_Import_streamlit.py
legacy_streamlit/: app.py
models/: enums.py
pages/: 1_Famille.py  2_Personnes.py  3_Import.py
qt_ui/: main_window.py  theme.py
scripts/: patrimoine.spec
services/: asset_panel_mapping.py  bourse_advanced_analytics.py  bourse_analytics.py  calculations.py  cashflow.py  common_utils.py  credits.py  db.py  depenses_repository.py  diagnostics.py  diagnostics_global.py  efficient_frontier.py  entreprises_repository.py  family_dashboard.py  family_snapshots.py  fx.py  global_search_service.py  goals_projection_repository.py  immobilier_repository.py  import_aliases_service.py  import_history.py  import_lookup_service.py  imports.py  isin_resolver.py  liquidites.py  market_history.py  native_milestones.py  panel_data_access.py  pdf_export.py  pe_cash_repository.py  portfolio.py  portfolio_backtest_service.py  positions.py  prevision.py  prevision_base.py  prevision_explain.py  prevision_goals.py  prevision_models.py  prevision_risk.py  prevision_stress.py  (+18 more)
tests/: conftest.py  test_bourse_advanced_analytics.py  test_credits.py  (+28 more)
(+94 files in other folders)
