[project]
name = "patrimoine-desktop"
version = "0.1.0"
description = "PyQt6 desktop application for personal and family wealth tracking"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Maxime Farre" }]
keywords = ["finance", "wealth", "portfolio", "pyqt6", "desktop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]

dependencies = [
    "PyQt6>=6.7",
    "PyQt6-WebEngine>=6.7",
    "pandas>=2.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "plotly>=5.20",
    "matplotlib>=3.8",
    "yfinance>=0.2",
    "fpdf2>=2.7",
    "requests>=2.31",
    "pillow>=10.0",
]

[project.optional-dependencies]
turso = ["libsql>=0.1", "libsql-client>=0.3"]
tr = ["pytr>=0.4", "curl_cffi>=0.6", "websockets>=15.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.11",
    "black>=24.10",
    "pre-commit>=3.8",
]

[project.scripts]
patrimoine = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".venv", ".git", "pytest-cache-files-*", "__pycache__", "build", "dist"]

[tool.pyinstaller]
spec = "scripts/patrimoine.spec"

[tool.black]
line-length = 120
target-version = ["py311"]
extend-exclude = '''
(
  /(
      \.venv
    | build
    | dist
    | pytest-cache-files-.*
  )/
)
'''

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".venv", "build", "dist", "pytest-cache-files-*"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
per-file-ignores = { "main.py" = ["E402"] }
